# hotel-receptionist-voice-bot

./: README.md  index.md  pyproject.toml  requirements.txt  voice_input_handler.py
code/: bot_main.py  reservation_db.py
src/: __init__.py  bot_main.py  main.py  mcp_agent.config.yaml  reader.py  translator.py
tests/: __init__.py  test_api.py  test_bot_main.py  test_translation.py
