[project]
name = "hotel-voice-agent"
version = "0.1.0"
description = "Hotel receptionist voice agent and Supabase integration"
authors = [
    { name="Marco Berta", email="info@marco-berta.com" }
]

requires-python = ">=3.11"

dependencies = ["openai-agent",
"pydantic",
"supabase",
"fastapi >= 0.110.0",
"uvicorn >= 0.29.0",
"httpx >= 0.27.0",
"openai-agents-mcp"]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6"
]

[tool.setuptools]
packages = ["."]